[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/end_screen.gd" type="Script" id=1]
[ext_resource path="res://src/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Lato-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sounds/cheering.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[node name="EndScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBox" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 600 )
custom_constants/separation = 20
alignment = 1

[node name="GameOver" type="Label" parent="Control/VBox"]
margin_top = 89.0
margin_right = 1280.0
margin_bottom = 205.0
theme = ExtResource( 2 )
text = "Game Over"
align = 1
valign = 1

[node name="Alive" type="Label" parent="Control/VBox"]
margin_top = 225.0
margin_right = 1280.0
margin_bottom = 259.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "You successfully raised _ children!"
align = 1
valign = 1

[node name="Dead" type="Label" parent="Control/VBox"]
margin_top = 279.0
margin_right = 1280.0
margin_bottom = 313.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "You are responsible for the death of _ children."
align = 1
valign = 1

[node name="Custom" type="Label" parent="Control/VBox"]
margin_top = 333.0
margin_right = 1280.0
margin_bottom = 367.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "You must be an experienced parent! Or you just hid the bodies really well!"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Control/VBox"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 387.0
margin_right = 1280.0
margin_bottom = 391.0

[node name="Restart_button" type="Button" parent="Control/VBox"]
margin_left = 500.0
margin_top = 411.0
margin_right = 780.0
margin_bottom = 471.0
rect_min_size = Vector2( 280, 60 )
size_flags_horizontal = 4
text = "Restart"
__meta__ = {
"_editor_description_": ""
}

[node name="Option_button" type="Button" parent="Control/VBox"]
visible = false
margin_left = 75.0
margin_top = 299.0
margin_right = 325.0
margin_bottom = 339.0
rect_min_size = Vector2( 280, 60 )
size_flags_horizontal = 4
text = "Option"
__meta__ = {
"_editor_description_": ""
}

[node name="Menu_buton" type="Button" parent="Control/VBox"]
margin_left = 500.0
margin_top = 491.0
margin_right = 780.0
margin_bottom = 551.0
rect_min_size = Vector2( 280, 60 )
size_flags_horizontal = 4
text = "Main menu"
__meta__ = {
"_editor_description_": ""
}

[node name="Quit_buton" type="Button" parent="Control/VBox"]
margin_left = 500.0
margin_top = 571.0
margin_right = 780.0
margin_bottom = 631.0
rect_min_size = Vector2( 280, 60 )
size_flags_horizontal = 4
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[node name="Cheer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Control/VBox/Restart_button" to="." method="_on_Restart_button_pressed"]
[connection signal="pressed" from="Control/VBox/Option_button" to="." method="_on_Option_button_pressed"]
[connection signal="button_up" from="Control/VBox/Menu_buton" to="." method="_on_Menu_buton_button_up"]
[connection signal="button_up" from="Control/VBox/Quit_buton" to="." method="_on_Quit_buton_button_up"]
